--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "pug": "^2.0.3"
   },
   "devDependencies": {},
