--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "sqlite3": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
