use sqlite instead of sqlite3

--- a/admin-browser/package.json
+++ b/admin-browser/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "pm2": "^3.0.0",
     "puppeteer": "^1.6.0",
-    "sqlite3": "^4.0.1"
+    "sqlite": "^2.9.2"
   },
   "devDependencies": {},
   "scripts": {
