--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "pm2 start ./src/index.js"
+    "start": "npm i && pm2 start --no-daemon ./src/index.js"
   },
   "author": "",
   "license": "MIT"
