--- a/admin-browser/package.json
+++ b/admin-browser/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && pm2 start --no-daemon ./index.js"
+    "start": "pm2 start ./index.js"
   },
   "author": "",
   "license": "MIT"
